--- a/public/index.html
+++ b/public/index.html
@@ -10,4 +10,5 @@
   <body>
     <div id="app"></div>
   </body>
+  <script src="https://qiyukf.com/script/195c46e48dbc53395f1d600e16a463da.js?hidden=1"></script>
 </html>
