--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,5 @@
   <body>
     <div id="app"></div>
   </body>
-  <!-- <script src="https://qiyukf.com/script/c34c10a29524dd342c2702ae9768ceb4.js?hidden=1"></script> -->
+  <script src="https://qiyukf.com/script/c34c10a29524dd342c2702ae9768ceb4.js?hidden=1"></script>
 </html>
